# jabberwocky-container-manager

./: .gitignore  LICENSE  README.md  build.py  demo.py  download_prerequisites.py  echo.c  installer.py  lint.bash  pyproject.toml  run.py  server.py  test_config
installer/: installer.py
scripts/: build.sh  clean.sh
src/: globals.py
src/cli/: cli.py
src/containers/: container.py  container_builder.py  container_config.py  container_extras.py  container_manager.py  container_manager_client.py  container_manager_server.py  container_manifest.py  exceptions.py  install.py  port_allocation.py  stream.py
src/repo/: repo_manager.py
src/system/: filezilla.py  multithreading.py  my_socket.py  os.py  socket.py  ssh.py  state.py  syspath.py  update.py
