[tool.poetry]
name = "jabberwocky-container-manager"
version = "0.1.0"
description = "Container manager for the Jabberwocky project"
authors = ["Kippiii <ianorzel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jabberwocky_container_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
mypy = "^0.982"
pylint = "^2.15.3"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
disallow_any_unimported = True
disallow_any_expr = True
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_degs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
local_partial_types = True
strict_concatenate = True
strict_equality = True
show_error_codes = True

