[tool.poetry]
name = "jabberwocky-container-manager"
version = "0.1.0"
description = "Container manager for the Jabberwocky project"
authors = ["Kippiii <ianorzel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jabberwocky_container_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
mypy = "^0.982"
pylint = "^2.15.3"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_degs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
local_partial_types = true
strict_concatenate = true
strict_equality = true
show_error_codes = true

